# nonebot-plugins-watch

./: .coverage  README-zh.md  README.md  coverage.xml  pyproject.toml  pyrightconfig.json
.github/workflows/: codecov_workflow.yml  python37package.yml
nbplugins_watch/: __init__.py  nbplugins_watch.py
tests/: test_nbplugins_watch.py
