[tool.poetry]
name = "nbplugins_watch"
version = "0.0.1"
description = "watch and (re)load plugins from a directory"
authors = ["ffreemt"]

[tool.poetry.dependencies]
python = "^3.7"
nonebot = "^1.6.0"
watchgod = "^0.6"
logzero = "^1.5.0"
pytest-cov = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
